    - Revert changes introduced in 1.75

1.75      2019-01-08 19:45:38Z
    - $uri->canonical unconditionally returns a clone (GH#58) (Dorian Taylor)

1.74      2018-04-22 12:30:44Z
    - avoid 'uninitialized' warning in URI::File when host has no domain name
      set (PR#53, thanks Shoichi Kaji!)

1.73      2018-01-09 06:42:51Z
    - Update documentation for URI::_punycode (GH Issue #45)

1.72      2017-07-25
    - Convert the dist to Dist::Zilla for authoring.
    - Remove recommendation of Business::ISBN as urn/isbn.pm is deprecated
    - Use Test::Needs instead of raw eval in urn-isbn.t

2016-01-08   Karen Etheridge <ether@cpan.org>

  Release 1.71

    No changes since 1.70_001

2015-12-29   Karen Etheridge <ether@cpan.org>

  Release 1.70_001

  Kaitlyn Parkhurst:

    - Localize $@ when attempting to load URI subclasses (PR#30)

  Karen Etheridge:

    - speed up construction time by not attempting to load the same
      non-existent URI subclass twice


2015-07-25   Karen Etheridge <ether@cpan.org>

  Release 1.69

  Karen Etheridge:
    - add $VERSIONs for all modules that lack them

  Olaf Alders:
    - add missing documentation for URI::sftp
    - Clarify use of query_param() method


2015-06-25   Karen Etheridge <ether@cpan.org>

  Release 1.68

  Kent Fredric:
    - Sort hash keys to make generated query predictable

  Slaven Rezic:
    - Add new tests for path segments

  Brendan Byrd:
    - Add sftp scheme


2015-02-24   Karen Etheridge <ether@cpan.org>

  Release 1.67

  Karen Etheridge:
    - properly skip author test for normal user installs


2015-02-24   Karen Etheridge <ether@cpan.org>

  Release 1.66

  Adam Herzog:
    - reorganize .pm files under lib/ (github #20)


2014-11-05   Karen Etheridge <ether@cpan.org>

  Release 1.65

  Karen Etheridge:
    - add a TO_JSON method, to assist JSON serialization


2014-07-13   Karen Etheridge <ether@cpan.org>

  Release 1.64

  Eric Brine: